# project_halo

adding_sol2_lua/: CMakeLists.txt  build.sh  echo
adding_sol2_lua/assets/scripts/: main.lua
adding_sol2_lua/dependencies/lua/src/: lua  luac
adding_sol2_lua/src/: main.cpp
drawingrect/: CMakeLists.txt  build.sh  compile_commands.json
drawingrect/src/: main.cpp
jai_gurudev/: CMakeLists.txt  main.cpp
learnCmake/cmakeHelloWorld/: CMakelists.txt
learnCmake/my_proj/: CMakeLists.txt
learnCmake/my_proj/nlibrary/: CMakeLists.txt
learnCmake/my_proj/nlibrary/include/: narayan.h
learnCmake/my_proj/nlibrary/src/: narayan.cpp
learnCmake/my_proj/src/: main.cpp
sandbox/: basicSandbox  basicSandbox.c  main  main.cpp  sandbox  sandbox.cpp  stderr.txt  stsout.txt
